--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
   },
   "dependencies": {
     "body-parser": "^1.12.2",
+    "connect-busboy": "*",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
-    "express": "^4.12.3",
     "ejs": "*",
+    "express": "^4.12.3",
     "leanengine": "^1.0.0",
     "method-override": "^2.3.2",
     "morgan": "~1.5.1",
+    "multer": "^1.3.0",
     "serve-favicon": "~2.3.0",
     "underscore": "^1.8.3"
   },
