--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "morgan": "~1.5.1",
     "multer": "^1.3.0",
     "serve-favicon": "~2.3.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "qr-image": "^3.1.0",
+    "request": "^2.79.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
